--- a/content/modules/ROOT/nav.adoc
+++ b/content/modules/ROOT/nav.adoc
@@ -31,5 +31,8 @@
 ** xref:module-05.adoc#prerequisites[Prerequisites for Migrations]
 ** xref:module-05.adoc#migrating_vms[Migrating Virtual Machines from VMware]
 
-* xref:bootcamp-modules.adoc[Additional Boot Camp Content]
+* Additional Boot Camp Content
 ** xref:17_trilio_backup.adoc[Trilio Lab]
+** xref:22_disconnected.adoc[Disconnected Environments]
+** xref:24_presales.adoc[Pre Sales, Discovery Sessions, and Virtualization Assessments]
+
