--- a/content/modules/ROOT/bootcamp/pages/19_service_route.adoc
+++ b/content/modules/ROOT/bootcamp/pages/19_service_route.adoc
@@ -1,7 +1,7 @@
 :scrollbar:
 :toc2:
 
-=  Migration Toolkit for Virtualization
+=  Using a Service and Route to expose an application
 
 == Introduction
 
