--- a/content/modules/ROOT/pages/04a_DO316.adoc
+++ b/content/modules/ROOT/pages/04a_DO316.adoc
@@ -2,10 +2,10 @@ Please open up your browser to https://role.rhu.redhat.com/rol-rhu/app/courses/d
 
 
 
-= DO316 Section 3 - Configure Kubernetes Networking for Virtual Machines
+= DO316 Section Chapter 5.  Configuring Kubernetes Storage for Virtual Machines
 
 
-=== https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch03s02[ Kubernetes Networking Objects]
+=== https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch05s07[Lab - Configuring Storage for Virtual Machines]
 
 You will have 20 minutes to complete this section/lab.  Once you complete the lab please stop and wait for the Instuctors to review the lab with everyone.  
 
