--- a/content/modules/ROOT/pages/04a_DO316.adoc
+++ b/content/modules/ROOT/pages/04a_DO316.adoc
@@ -5,19 +5,19 @@ Please open up your browser to https://role.rhu.redhat.com/rol-rhu/app/courses/d
 = DO316 Section Chapter 5.  Configuring Kubernetes Storage for Virtual Machines
 
 
-=== https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch05s07[Lab - Configuring Storage for Virtual Machines]
+=== https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch05s02[Attach Persistent Storage to Virtual Machines]
 
 You will have 20 minutes to complete this section/lab.  Once you complete the lab please stop and wait for the Instuctors to review the lab with everyone.  
 
-=== https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch03s04[Configure External Access to Virtual Machines]
+=== https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch05s04[Attach and Access Disks on Virtual Machines]
 
 You will have 20 minutes to complete this section/lab.  Once you complete the lab please stop and wait for the Instuctors to review the lab with everyone.  
 
-=== https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch03s06[Configure External Access with Load Balancer Services]
+=== https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch05s06[Connect Virtual Machines to External Storage]
 
 You will have 20 minutes to complete this section/lab.  Once you complete the lab please stop and wait for the Instuctors to review the lab with everyone.  
 
-=== https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch03s07[Final Review Section 3 - Configure Kubernetes Networking for Virtual Machines]
+=== https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch05s07[Final Review Section 5 - Configuring Storage for Virtual Machines]
 
 You will have 20 minutes to complete this section/lab.  Once you complete the lab please stop and wait for the Instuctors to review the lab with everyone.  
 
