--- a/content/modules/ROOT/pages/04a_DO316.adoc
+++ b/content/modules/ROOT/pages/04a_DO316.adoc
@@ -21,9 +21,9 @@ You will have 20 minutes to complete this section/lab.  Once you complete the la
 
 You will have 20 minutes to complete this section/lab.  Once you complete the lab please stop and wait for the Instuctors to review the lab with everyone.  
 
-= DO316 Section 4 -  Connecting Virtual Machines to External Networks
+= DO316 Section 7 -  Advanced Virtual Machine Management
 
-=== https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch04s04[Configure Multihomed Nodes and Virtual Machines]
+=== https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch07s02[Migrate Virtual Machines from Compatible Hypervisors]
 
 You will have 20 minutes to complete this section/lab.  Once you complete the lab please stop and wait for the Instuctors to review the lab with everyone.  
 
