--- a/content/modules/ROOT/pages/04a_DO316.adoc
+++ b/content/modules/ROOT/pages/04a_DO316.adoc
@@ -2,6 +2,19 @@ Please open up your browser to https://role.rhu.redhat.com/rol-rhu/app/courses/d
 
 
 
+= DO316 Section 4.  Connecting Virtual Machines to External Networks
+
+
+=== https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch04s04[Configure Multihomed Nodes and Virtual Machines]
+
+You will have 20 minutes to complete this section/lab.  Once you complete the lab please stop and wait for the Instuctors to review the lab with everyone.  
+
+=== https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch04s05[Connecting Virtual Machines to External Networks]
+
+You will have 20 minutes to complete this section/lab.  Once you complete the lab please stop and wait for the Instuctors to review the lab with everyone.  
+
+
+
 = DO316 Section 5.  Configuring Kubernetes Storage for Virtual Machines
 
 
@@ -21,24 +34,9 @@ You will have 20 minutes to complete this section/lab.  Once you complete the la
 
 You will have 30 minutes to complete this section/lab.  Once you complete the lab please stop and wait for the Instuctors to review the lab with everyone.  
 
+
 = DO316 Section 7 -  Advanced Virtual Machine Management
 
-
-=== https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch07s02[Migrate Virtual Machines from Compatible Hypervisors]
-
-You will have 20 minutes to complete this section/lab.  Once you complete the lab please stop and wait for the Instuctors to review the lab with everyone.  
-
-=== https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch07s04[Manage Virtual Machine Snapshots]
-
-You will have 20 minutes to complete this section/lab.  Once you complete the lab please stop and wait for the Instuctors to review the lab with everyone.  
-
-=== https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch07s06[Clone a Virtual Machine]
-
-You will have 20 minutes to complete this section/lab.  Once you complete the lab please stop and wait for the Instuctors to review the lab with everyone.  
-
-=== https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch07s08[Perform Virtual Machine Live Migrations]
-
-You will have 20 minutes to complete this section/lab.  Once you complete the lab please stop and wait for the Instuctors to review the lab with everyone.  
 
 === https://role.rhu.redhat.com/rol-rhu/app/courses/do316-4.14/pages/ch07s09[Node Maintenance and OpenShift Virtualization Updates]
 
