--- a/content/modules/ROOT/pages/00_introductions.adoc
+++ b/content/modules/ROOT/pages/00_introductions.adoc
@@ -36,11 +36,15 @@
 *** Additional Labs from DO316 Chapters 7 & 8
 
 == Thursday
-* 9AM - 11:00AM
+* 9AM - 11AM
 *** Trilio demo, and lab presented by Rodolfo Casas, Senior Solutions Architect & Red Hat Certified Architect from Trilio
-* 11:00AM - 12:00PM
+* 11AM - 11:30AM
+*** Follow-ups, Clean-ups with Virt Labs
+11:30AM - 12PM
 *** Setup for Mock Discovery Sessions & Mock Virtualization Assessments
-* 12:00PM - 2:00PM (Breaks as needed)
+* 12:00PM - 1:00PM
+*** Lunch
+* 1PM - 2PM 
 *** Split into teams for Mock Discovery Sessions
 * 2:00PM - 6:00PM
 *** Split into teams for Mock Virtualization Assessments
