--- a/content/modules/ROOT/pages/00_introductions.adoc
+++ b/content/modules/ROOT/pages/00_introductions.adoc
@@ -54,6 +54,8 @@
 *** Teams present readouts from Mock Assessments and Dicovery Sessions
 *** Close out
 *** Survey
+* 12:30 ->
+*** Lunch & Go Home!
 
 == Instructors
 
