--- a/content/modules/ROOT/pages/00_introductions.adoc
+++ b/content/modules/ROOT/pages/00_introductions.adoc
@@ -53,7 +53,7 @@
 * 9AM - 12:30PM
 *** Teams present readouts from Mock Assessments and Dicovery Sessions
 *** Close out
-*** Survey
+*** Survey (Please do the survey, it's the only metrics we get from these events. It just takes a couple minutes)
 * 12:30 ->
 *** Lunch & Go Home!
 
