--- a/content/modules/ROOT/pages/00_introductions.adoc
+++ b/content/modules/ROOT/pages/00_introductions.adoc
@@ -136,7 +136,7 @@ link:https://red.ht/virtkit[Content Kit]
 
 https://catalog.redhat.com/platform/red-hat-openshift/virtualization[Certified Partners list]
 
-link:https://source.redhat.com/groups/public/us-public-sector/gmn[Good Morning NAPS ]
+link:https://source.redhat.com/departments/sales/globalservices/virtualization[OCP-Virtualization Enablement Global Page]
 
 link:https://source.redhat.com/groups/public/gtm_power_hour[BU PowerHour]
 
