--- a/content/modules/ROOT/pages/00_introductions.adoc
+++ b/content/modules/ROOT/pages/00_introductions.adoc
@@ -78,45 +78,168 @@
 *** Getting setup
 *** Lab URLs and details
 
+* 5:30 PM - 6:00 PM 
+** Module 01 (module-01) - Baremetal VM Management and OpenShift Virtualization Requirements
+*** Agenda:
+**** Introduction
+**** Supported Platforms
+**** Requirements for OpenShift Virtualization
+**** Review Red Hat OpenShift Cluster
+**** Review Nodes and Machines
+**** Review Bare Metal hosts
+
 == Wednesday, July 3rd
 
+* 8:30 AM - 9:30 AM
+** Review Module-00 (module-00) - Virtual Machine Management
+** Lab 03 (03_ocpv_basics) - OpenShift Virtualization Basics
+*** Agenda:
+**** Create a new Project
+**** Create a Linux virtual machine
+**** Access the virtual machine console
+**** Live migrate a virtual machine
+**** Controlling virtual machine state
+**** Virtualization Overview dashboard
+
+* 9:30AM - 10:00 
+** Module 5 (module-05) - Migrating Virtual Machines
+** Lab 2 (02_migrate_vms) - Migration Toolkit for Virtualization
+*** Agenda:
+**** OpenShift Virtualization Overview
+**** Introduction
+**** Prerequisites for the VMware Provider
+**** Migrating Virtual Machines from VMware
+**** Review the VMware environment
+**** Review the VMware provider to the migration toolkit
+**** Create storage and network mappings
+**** Create a Migration Plan
+**** Review and configure migrated Virtual Machines
+
+* 10:00 AM - 10:30 AM
+** Module 4 (module-04) - Introduction to Virtual Machine Customization
+** Lab 5 (05_ocpv_customization)  - Introduction to virtual machine customization
+*** Agenda:
+**** Customizing a virtual machine at creation
+
+* 10:30 AM: 11:30 AM
+** Lab (06_windows_vm.adoc) - Windows Virtual Machines with OpenShift Virtualization
+*** Agenda:
+**** Create a Windows virtual machine
+
+* 11:30 AM: 12:30 AM
+* Module 3 (module-03) - Network Management
+* Lab (09_network_management) - Network Management Lab
+*** Agenda:
+**** Introduction to Network Management
+**** Create Network Attachment Definition
+**** Connect a virtual machine to the external network
+
+* 12:30 PM -  1:30 PM
+** Lunch
+
+* 1:30 PM - 2:30 PM
+** Module 2 (module-02) - Storage Management
+** Lab (10_storage_management) - Storage Management Lab
+*** Agenda:
+**** Introduction to Storage Management
+**** OpenShift Virtualization Default Boot Sources
+**** Snapshots
+**** Introduction
+**** Creating and using Snapshots
+**** Clone a Virtual Machine
+
+* 2:30 PM - 3:00 PM
+** Lab (15_backup_restore) - Backup and Restore
+*** Agenda:
+**** Introduction
+**** Review Operator
+**** Create a backup
+**** Restore a backup
+
+* 3:00 PM - 3:30 PM
+**  Lab (19_service_route) - Service Routes
+*** Agenda:
+**** Introduction
+**** Using a Service and Route to expose an application
+**** Create the Service
+**** Create the Route
+
+* 3:30 PM - 4:00 PM
+** Lab (07_vm_management) - Virtual Machine Management
+*** Agenda:
+**** Examine resources associated with the virtual machine
+**** Controlling virtual machine state
+**** Live Migrate a virtual machine
+
+* 4:00 PM - 4:30 PM
+** Lab (20_metallb) - Load Balancer Concepts
+*** Agenda: 
+**** MetalLB concepts
+**** Layer2 mode
+**** Layer 3 (BGP) mode
+**** Define IP AddressPool
+**** Configure Layer2 mode
+**** Expose the database node externally
+
+* 4:30 PM - 6:00 PM 
+** Additional Labs from DO316 Chapters 7 & 8
+
+== Thursday, July 4th 
+
+* 8:30 AM - 11:30 AM
+**  Trilio demo, and lab presented by Rodolfo Casas, Senior Solutions Architect & Red Hat Certified Architect from Trilio
+** Lab (17_trilio_backup) - Backing up with Trilio
+*** Agenda
+**** Trillio Overview
+**** Trillio T40 Product Overview and positioning
+**** Red Hat and Trilio Engagement Model
+**** Trillio Demonstration
+
+* 11:30 AM - 12:00 PM
+** VMware vSphere Overview Presentation 
+** VMware to OpenShift Presentation
+
+* 12:00 PM - 12:30 PM
+** Quick Lunch
+
+* 12:30 AM - 1:00 AM
+** Migration Factory Deep Dive
+** Deep Dive on the Migration Factory offering: OpenShift Virtualization Ansible Migration Factory Collection
+
+* 1:00 PM - 2:00 PM
+** Scenario Exercise
+*** Agenda & Objectives
+**** We are going to divide the group into three teams. 
+**** Each team is going to get a scenario with customer use cases and data. 
+**** Each team is expected to produce a presentation with: 
+**** High-Level Design 
+**** Constrains / Assumptions 
+**** Migration Approach 
+**** Each team is going to present its approach and defend it in from of the other teams. 
+
+* 2:00 PM - 3:30 PM
+** Scenario Excercise - Presentation Time 
+*** Agenda & Objectives
+**** Each team will have 20 minutes to present their approach and answer questions
+
+* 3:30 PM - 3:45 PM 
+** Break
+
+* 3:45 PM - 4:30 PM
+** Ask me Anything Discussion
+
+* 4:30 PM - 5:00 PM
+** Close Out
+*** Agenda:
+**** Account/Opportunities Overview
+**** Verbiage in Close Out Bootcamp notes to sign up for Exam
+**** Survey
 
 
-== Wednesday, June 26th
-* 9AM - 9:30AM
-*** Follow-ups, Clean-ups with Virt Labs
-* 9:30AM - 10AM
-*** Presentation: OpenShift Virtualization Networking & Storage
-* 10AM - 12PM
-*** Networking & Storage Labs
-* 12PM - 1PM
-*** Lunch
-* 1PM - 6PM (breaks as needed)
-*** Additional Labs from DO316 Chapters 7 & 8
 
-== Thursday, June 27th
-* 9AM - 11AM
-*** Trilio demo, and lab presented by Rodolfo Casas, Senior Solutions Architect & Red Hat Certified Architect from Trilio
-* 11AM - 11:30AM
-*** Exam Certification Acceleration Tips
-* 11:30AM - 12PM
-*** Setup for Mock Discovery Sessions & Mock Virtualization Assessments
-* 12PM - 1PM
-*** Lunch
-* 1PM - 2PM 
-*** Split into teams for Mock Discovery Sessions
-* 2PM - 6PM
-*** Split into teams for Mock Virtualization Assessments
+== Friday, July 5th
 
-== Friday, June 28th
-* 9AM - 12PM
-*** Teams present readouts from Mock Assessments and Dicovery Sessions
-* 12PM - 12:30PM
-*** Ask an OpenShift Architect, with https://www.youtube.com/@AlesNosekTSP[Ales Nosek]
-* 12:30 ->
-*** Close out
-*** Survey (Please do the survey, it's the only metrics we get from these events. It just takes a couple minutes)
-*** Lunch & Go Home!
+* Travel Day
 
 == Instructors
 
@@ -140,10 +263,6 @@ image::introductions/trilio-rodolfo.jpg[]
 == Class Introductions
 
 * All
-
-== BU
-
-* BU Product overview and roadmap with Sachin Mullick
 
 == Lab URL
 
